@@ -26,6 +26,7 @@ Fixes:
    doing a @shutdown/reboot anyway. Reported by Paige. [MG]
  * The Telnet escape code was not properly escaped when sent literally to
    Pueblo-aware clients. [MG]
+ * namelist() did not accept names in quotes. Reported by Amberyl. [MG]
 
 
 & 1.8.4p0
